styles/global.css
/* ... */
.contact__card-title,
.contact__card-data {
  font-size: var(--small-font-size);
}

.contact__card-title {
  font-weight: var(--font-medium);
}
.contact__card-data {
  display: block;
  margin-bottom: var(--mb-0-25);
}

.contact__button {
  color: var(--title-color);
  font-size: var(--small-font-size);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  column-gap: 0.25rem;
}

.contact__button-icon {
  font-size: 1rem;
  transition: 0.3s;
}
.contact__button:hover .contact__button-icon {
  transform: translate(0.25rem);
}

.contact__form {
  width: 360px;
}

.contact__form-div {
  position: relative;
  margin-bottom: var(--mb-2);
  height: auto;
  width: 100%;
}
.contact__form_searched-div {
  position: relative;
  margin-bottom: var(--mb-2);
  height: auto;
  width: 100%;
  margin-top: 3%;
}

.contact__form-input {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background: none;
  color: var(--text-color);
  outline: none;
  border-radius: 0.75rem;
  padding: 0.5rem;
  z-index: 1;
}
.contact__form-inputs {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 30%;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background: none;
  color: var(--text-color);
  outline: none;
  padding: 0.5rem;
  border-radius: 0.75rem;

  z-index: 1;
}

.contact__form-input,
.contact__form-inputs {
  height: 45px;
  min-height: 40px;
  padding: 10px 14px;
  font-size: 1rem;
  line-height: normal;
}

.contact__message {
  resize: none;
}
.contact__message::-webkit-scrollbar {
  width: 10px;
}
.contact__message::-webkit-scrollbar-track {
  background: var(--pink);
}

.contact__message::-webkit-scrollbar-thumb {
  background-color: var(--title-color);
  border-radius: 20px;
}
.contact__message::-webkit-scrollbar-thumb:hover {
  background-color: var(--title-color-dark);
}

.contact__form-tag {
  position: absolute;
  top: -0.95em;
  left: 1.25rem;
  font-size: var(--smaller-font-size);
  padding: 0.25rem;
  background-color: var(--body-color);
  z-index: 10;
}

.contact__form-area {
  height: 11rem;
  resize: none;
}
.contact__form-area textarea {
  resize: none;
}
/*=============== MANUFACTURER FORM ===============*/
.manufacturer__title {
  text-align: center;
  font-size: var(--h3-font-size);
  font-weight: 500;
  margin-bottom: 20px;
}
.manufacturer__form {
  width: 90%;
}

.manufacturer__form-div {
  position: relative;
  margin-bottom: var(--mb-2);
  height: 4rem;
  width: 100%;
}

.manufacturer__form-input {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background: none;
  color: var(--text-color);
  outline: none;
  border-radius: 0.75rem;
  padding: 1.5rem;
  z-index: 1;
}
.manufacturer__message {
  resize: none;
}
.manufacturer__message::-webkit-scrollbar {
  width: 10px;
}
.manufacturer__message::-webkit-scrollbar-track {
  background: var(--pink);
}

.manufacturer__message::-webkit-scrollbar-thumb {
  background-color: var(--title-color);
  border-radius: 20px;
}
.manufacturer__message::-webkit-scrollbar-thumb:hover {
  background-color: var(--title-color-dark);
}

.manufacturer__form-tag {
  position: absolute;
  top: -0.95em;
  left: 1.25rem;
  font-size: var(--smaller-font-size);
  padding: 0.25rem;
  background-color: var(--body-color);
  z-index: 10;
}

.manufacturer__form-area {
  height: 11rem;
  resize: none;
}
.manufacturer__form-area textarea {
  resize: none;
}
/*=============== ORDER PAGE ===============*/
.alert-error {
  @apply my-3 rounded-lg bg-red-100 p-3 text-red-700;
}

.alert-success {
  @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
}
.buttons-container {
  width: 80%;
  margin-right: 10%;
  padding-left: 0%;
}

/*=============== FOOTER ===============*/
.footer {
  background-color: #f3f3f3;
  color: var(--title-color);
  padding: 20px;
  width: 100%;
  min-height: 400px;
  margin-bottom: 0;
}

.footer-container {
  display: flex;
  justify-content: space-between;
}

.footer-linkGroup {
  margin-right: 20px;
}

.footer-links {
  display: flex;
}

.footer-contactInfo {
  max-width: 300px;
}

.footer-copyright {
  text-align: center;
  padding: 10px;
  font-size: 1rem;
}

.recaptcha-wrapper {
  display: inline-block;
}

/* small cell phones */
@media (max-width: 480px) {
  .recaptcha-wrapper {
    transform: scale(0.82); /* adjust the scale to your liking (0.8–0.9) */
    transform-origin: 0 0; /* scale from the top left corner */
  }
}

/* Tablets / large mobile devices in portrait */
@media (min-width: 481px) and (max-width: 768px) {
  .recaptcha-wrapper {
    transform: scale(0.9);
    transform-origin: 0 0;
  }
}

/*=============== BREAKPOINTS ===============*/

/* For large devices */
@media screen and (max-width: 992px) {
  .contact__container {
    column-gap: 3rem;
  }
}

/* For medium devices */
@media screen and (max-width: 768px) {
  .contact__container {
    grid-template-columns: 1fr;
  }
  .contact__info {
    justify-content: center;
  }
  .contact__form {
    margin: 0 auto;
  }
  .card {
    @apply mt-3 rounded-lg border-gray-200 shadow-md mx-3;
  }
  .container {
    padding-top: 0;
  }
  .section {
    padding: 1rem 0 2rem;
  }
  main {
    margin-top: 0;
  }
}

/* iPad Mini specific - reduce white space */
@media screen and (min-width: 768px) and (max-width: 810px) {
  .main {
    margin-top: 8rem !important;
  }
}

/* iPad Air and larger tablets - more spacing for header clearance */
@media screen and (min-width: 811px) and (max-width: 1023px) {
  .main {
    margin-top: 15rem !important;
  }
}

@media screen and (max-width: 576px) {
  .contact__info {
    grid-template-columns: 1fr;
  }
  .contact__form {
    width: 100%;
  }
}

/* For small devices */
@media screen and (max-width: 350px) {
}
/* ... */

